policies/privileged-containers-constraints-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: privilegedcontainers
spec:
  crd:
    spec:
      names:
        kind: PrivilegedContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package privilegedcontainers
        
        violation[{"msg": msg, "details": {}}] {
            c := input_containers[_]
            c.securityContext.privileged
            msg := sprintf("Privileged container is not allowed: %v", [c.name])
        }
        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
